Fix issue blur event on safari does not triggered

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -54,14 +54,19 @@
   max-height: calc(100vh - 160px - 44px);
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-html, body {
+html, body, .home-outside-container, .home-inside-container {
   min-height: 100%;
   height: 100%;
+}
+
+.home-outside-container {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+.home-inside-container {
+  display: flex;
+  flex-direction: column;
+  -webkit-tap-highlight-color: initial;
 }
 
 .navbar.shi-navbar {
